Criando usuário com atributo customizado

--- a/GerenciadorUsuarioB2C/appsettings.json
+++ b/GerenciadorUsuarioB2C/appsettings.json
@@ -2,6 +2,7 @@
   "azureadb2c": {
     "tenantId": "",
     "clientId": "",
-    "clientSecret": ""
+    "clientSecret": "",
+    "idAppUserData": ""
   }
 }
